# RAG_system

./: .env_example  .gitignore  README.md  pyproject.toml  render.yaml  streamlit_app.py
api/: dependencies.py  main.py  schemas.py
api/routes/: auth.py  chat.py  documents.py
src/: auth.py  config.py  create_database.py  history.py  main.py  query_data.py  test.py
src/app/models/: __init__.py  schemas.py
src/app/routes/: chat.py  documents.py
static/: index.html
