[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flashrank>=0.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "vecs>=0.4.5",
]
